--- a/style/style.scss
+++ b/style/style.scss
@@ -1,8 +1,93 @@
+@font-face {
+    font-family: Rubik_m;
+    src: url(../fonts/Rubik-Medium.ttf);
+}
+
+@font-face {
+    font-family: XeniaExtended;
+    src:url(../fonts/xeniaextended.ttf);
+}
+
+
+
 *{
     margin: 0;
     padding: 0;
 }
 
+body {
+    max-width: 1920px;
+    height: 5765px;
+    background: grey url('../images/Fon_body.png') 0 0/100% 100% no-repeat;
+}
+
+.wrapper {
+    max-width: 1170px;
+    margin: 0 auto;
+    height: 100%;
+    border: 2px solid blue;
+}
+
+header {
+    width: 100%;
+    padding-top: 3%;
+    margin-bottom: 175px;
+
+}
+
+.nav-item {
+    padding-right: 2%;
+}
+
+a.nav-link {
+    text-align: center;
+    width: 200px;
+    font-family: Rubik_m;
+    font-size: 25px;
+    line-height: 30px;
+    font-weight: 500;
+    text-transform: uppercase;
+    color: #ffffff;
+    border: 1px solid #fff;
+    border-radius: 10% ;
+    -webkit-border-radius: 10% ;
+    -moz-border-radius: 10% ;
+    -ms-border-radius: 10% ;
+    -o-border-radius: 10% ;
+}
+
+a.nav-link.link_phone {
+    width: 270px;
+}
+
 h1 {
-    color: red;
+    font-family: XeniaExtended;
+    text-align: center;
+font-size: 3vw;
+line-height: 1.2;
+font-weight: 400;
+text-transform: uppercase;
+color: #2b3443;
+}
+
+.old {
+text-align: center;
+padding-top: 5%;
+
+    ul {
+        display: inline-block;
+        padding: 2%;
+        list-style-type: none;
+        border-top: 14px solid #5f6e81;
+        border-bottom: 14px solid #5f6e81;
+
+        li {
+            font-family: XeniaExtended;
+            font-size: 3vw;
+            line-height: 1.2;
+            font-weight: 400;
+            text-transform: uppercase;
+            color: #2b3443;
+        }
+    }
 }
