--- a/style/style.scss
+++ b/style/style.scss
@@ -8,6 +8,23 @@
     src:url(../fonts/xeniaextended.ttf);
 }
 
+@font-face {
+    font-family: RubikBold;
+    src:url(../fonts/Rubik-Bold.ttf);
+}
+
+@font-face {
+    font-family: RubikRegular;
+    src:url(../fonts/Rubik-Regular.ttf);
+}
+
+@font-face {
+    font-family: RubikMedium;
+    src:url(../fonts/Rubik-Medium.ttf);
+}
+
+
+
 @mixin h3Heading {
     font-family: XeniaExtended;
     font-size: 1.9vw;
@@ -20,12 +37,53 @@
 }
 
 @mixin cardWH {
-    width: 271px;
-    height: 374px;
+   width: 271px;
+   height: 374px;
     background-position: center;
     background-size: cover;
     margin: 1% auto;
+    h5 {
+        font-family: Rubik_m;
+    }
+
+    p {
+        font-family: RubikRegular;
+    }
 }
+
+@mixin ulFooter {
+        font-family: RubikMedium;
+        font-size: 1.3vw;
+        line-height: 1.2;
+        font-weight: 500;
+        color: #fcfcf7;
+        list-style: none;
+    
+}
+
+@mixin hoverImgTransform {
+    transform:    rotate(720deg)  scale(1.2, 1.2);
+    transition: all 2s ease 1s;
+    -webkit-transition: all 2s ease 1s;
+    -moz-transition: all 2s ease 1s;
+    -ms-transition: all 2s ease 1s;
+    -o-transition: all 2s ease 1s;
+    -webkit-transform:    rotate(720deg)  scale(1.2, 1.2);
+    -moz-transform:    rotate(720deg)  scale(1.2, 1.2);
+    -ms-transform:    rotate(720deg)  scale(1.2, 1.2);
+    -o-transform:    rotate(720deg)  scale(1.2, 1.2);
+}
+
+@mixin notHoverImgTransform {
+    transition: 1s;
+    -webkit-transition: 1s;
+    -moz-transition: 1s;
+    -ms-transition: 1s;
+    -o-transition: 1s;
+    
+}
+
+
 
 
 
@@ -38,24 +96,55 @@ body {
     max-width: 1920px;
     height: auto;
     background: grey url('../images/Fon_body.png') 0 0/100% 100% no-repeat;
+   // background-size: cover;
 }
 
+//! button top
+
+a.button-top {
+    display: none;
+    position: fixed;
+    background-color: #b1b4b8af;
+    bottom: 100px;
+    right: 21px;
+    z-index: 99;
+    margin-top: 50px;
+    color: white;
+    font-weight: 700;
+    text-decoration: none;
+    user-select: none;
+    padding: 0.5em 2em;
+    outline: none;
+    border: 2px solid #444647;
+    border-radius: 11px;
+    transition: 0.2s;
+}
+
+a.button-top:hover {
+    background: rgba(255, 255, 255, 0.15);
+}
+
+a.button-top:active {
+    background: #4b5055b2;
+
+}    
+
+//!---------
 main {
     width: 100%;
-    margin-bottom: 222px;
+    margin-bottom: 16%;
 }
 
 .wrapper {
     max-width: 1170px;
     margin: 0 auto;
     height: 100%;
-    border: 2px solid blue;
 }
 
 header {
     width: 100%;
     padding-top: 3%;
-    margin-bottom: 175px;
+    margin-bottom: 15%;
 
 }
 
@@ -84,27 +173,38 @@ a.nav-link.link_phone {
     width: 270px;
 }
 
+.nav-link:hover {
+    background: #C77777;
+    box-shadow: 0 15px 20px rgba(46, 229, 157, .4);
+    color: white;
+    transform: translateY(-7px);
+}
+
 h1 {
     font-family: XeniaExtended;
     text-align: center;
     font-size: 3vw;
     line-height: 1.2;
-    font-weight: 400;
+    font-weight: bold;
     text-transform: uppercase;
     color: #2b3443;
 }
 
 .old {
+width: 100%;
+padding-left: 3%;
 text-align: center;
 padding-top: 5%;
-margin-bottom: 8%;
+margin-bottom: 10%;
 
     ul {
         display: inline-block;
-        padding: 2%;
+        padding: 2.4%;
         list-style-type: none;
         border-top: 14px solid #5f6e81;
         border-bottom: 14px solid #5f6e81;
+        font-weight: bold;
+        margin-top: -2%;
 
         li {
             font-family: XeniaExtended;
@@ -117,13 +217,29 @@ margin-bottom: 8%;
     }
 }
 
+.img_roof:hover {
+    @include hoverImgTransform();
+}
+
+.img_roof:not(hover) {
+    @include notHoverImgTransform();
+}
+
+
+
 .about_us {
     width: 100%;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
 
         img.img_roof {
             margin-bottom: 6%;
+            width: 30.3vw;
+        }
+
+        h3 {
+            font-family: RubikBold;
         }
 }
 
@@ -132,12 +248,12 @@ h3 {
 }
 
 .we {
+    font-family: RubikBold;
 
     ul {
-        list-style-type: none; 
+        list-style-image: url("../images/marker_circle_3_1298.png"); 
 
         li {
-            font-family: Rubik_m;
             font-size: 1.9vw;
             line-height: 1.2;
             font-weight: 700;
@@ -173,6 +289,12 @@ h3 {
         flex-wrap: wrap;
         justify-content: space-around;
         width: 100%;
+    }
+
+    .c_d {
+        display: flex;
+        justify-content: center;
+        align-items: flex-end;
     }
 
 .card_number_1 {
@@ -236,7 +358,7 @@ h3 {
 }
 
 .card_number_13 {
-    background: url('../images/13img_1441.png');
+    background: url('../images/13img_1441-1.png');
     @include cardWH();
 }
 
@@ -246,7 +368,7 @@ h3 {
 }
 
 .card_number_15 {
-    background: url('../images/15img_1446.png');
+    background: url('../images/15img_1446-1.png');
     @include cardWH();
 }
 
@@ -260,6 +382,12 @@ h3 {
 
     h3 {
         margin-bottom: 3%;
+        color: #5f6e81;
+        font-family: RubikBold;
+
+        b {
+            color: #2b3443;
+        }
     }
 }
 
@@ -283,10 +411,11 @@ h3 {
     @include cardWH();
 }
 
+
 .other {
     width: 100%;
     padding-top: 3%;
-    margin-top: 13%;
+    margin-top: 3%;
 
     h3 {
         text-align: left;
@@ -302,30 +431,80 @@ h3 {
 }
 
 .other_card_21 {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: flex-end;
     width: 570px;
     height: 270px;
     background: url('../images/21img_1506.png');
     background-position: center;
     background-size: cover;
     margin: 1% -2%;
+    font-family: Rubik_m;
+    padding-right: 6%;
+    padding-bottom: 3%;
 }
+
 
 .announcement {
-    width: 368px;
-    height: 174px;
+    position: relative;
+    width: 410px;
+    height: 217px;
     background-color: white;
     margin-top: 5%;
+    padding: 1%;
+    border: 4.4px solid #5f6e81;
+    border-radius: 5%;
+    -webkit-border-radius: 5%;
+    -moz-border-radius: 5%;
+    -ms-border-radius: 5%;
+    -o-border-radius: 5%;
 
+    h4{
+        font-family: RubikBold;
+        font-size: 18.3px;
+        line-height: 1.2;
+        font-weight: 700;
+        text-transform: uppercase;
+        color: #a90000;
+    }
+
+    p {
+        font-weight: 500;
+        text-transform: none;
+        color: #2b3443;
+        font-family: Rubik_m;
+    }
+
+    span {
+        position: absolute;
+        font-size: 9em;
+        color: #a90000;
+        font-weight: bold;
+        bottom: -15%;
+        right: 5%;
+    }
 }
+
 
 footer {
     width: 100%;
-    height: 471px;
+    //height: 471px;
+    padding: 1%;
     background-color: #5f6e81;
+    font-family: RubikMedium;
+
+    .ul_footer {
+        @include ulFooter();
+        margin-top: 10%;
+        
+    }
 }
 
 .contact_local {
-    width: 100%;
+    max-width: 1170px;
+    margin: 0 auto;
     display: flex;
     justify-content: space-around;
 }
@@ -334,8 +513,56 @@ footer {
     margin-top: -33%;
 }
 
+.map_footer:hover {
+    @include hoverImgTransform();
+}
+
+.map_footer:not(hover) {
+    @include notHoverImgTransform();
+}
+
 .contact_inet {
     text-align: center;
     width: 100%;
-    margin-top: 3%;
+    margin-top: 1%;
+
+    ul {
+        @include ulFooter();
+        padding: 0;
+    }
+
+    a {
+        color: white;
+        
+    }
 }
+
+
+@media (max-width: 1200px) { 
+ body {
+     background-size: cover;
+ }
+
+ .old {
+     display: none;
+ }
+
+ .about_us {
+    margin-top: 74%;
+    width: 100%;
+ }
+ }
+
+ @media (max-width: 1170px) {  
+     .wrapper {
+         max-width: 1170px;
+     }
+
+     main {
+         width: 100%;
+     }
+
+     footer {
+         max-width: 1170px;
+     }
+ }
