--- a/style/style.scss
+++ b/style/style.scss
@@ -94,9 +94,14 @@
 
 body {
     max-width: 1920px;
+    margin: 0 auto;
+}
+
+.gibka_main {
+    max-width: 100%;
     height: auto;
+    margin: 0 auto;
     background: grey url('../images/Fon_body.png') 0 0/100% 100% no-repeat;
-   // background-size: cover;
 }
 
 //! button top
@@ -106,7 +111,7 @@ a.button-top {
     position: fixed;
     background-color: #b1b4b8af;
     bottom: 100px;
-    right: 21px;
+    right: 28px;
     z-index: 99;
     margin-top: 50px;
     color: white;
@@ -148,20 +153,16 @@ header {
 
 }
 
-.nav-item {
-    padding-right: 2%;
-}
-
-a.nav-link {
-    text-align: center;
-    width: 200px;
+.nav-item a.nav-link {
+    //text-align: center;
+   // width: 200px;
     font-family: Rubik_m;
     font-size: 1.3vw;
     line-height: 30px;
     font-weight: 500;
     text-transform: uppercase;
     color: #ffffff;
-    border: 1px solid #fff;
+    border-bottom: 1px solid #fff;
     border-radius: 10% ;
     -webkit-border-radius: 10% ;
     -moz-border-radius: 10% ;
@@ -174,20 +175,29 @@ a.nav-link.link_phone {
 }
 
 .nav-link:hover {
-    background: #C77777;
+    background: #c7777779;
     box-shadow: 0 15px 20px rgba(46, 229, 157, .4);
     color: white;
     transform: translateY(-7px);
+}
+
+button.navbar-toggler {
+    background-color: blanchedalmond;
 }
 
 h1 {
     font-family: XeniaExtended;
     text-align: center;
     font-size: 3vw;
+   // margin-top: -4%;
     line-height: 1.2;
     font-weight: bold;
     text-transform: uppercase;
     color: #2b3443;
+}
+
+.h3_old {
+    display: none;
 }
 
 .old {
@@ -199,7 +209,7 @@ margin-bottom: 10%;
 
     ul {
         display: inline-block;
-        padding: 2.4%;
+        padding: 1.4%;
         list-style-type: none;
         border-top: 14px solid #5f6e81;
         border-bottom: 14px solid #5f6e81;
@@ -391,6 +401,10 @@ h3 {
     }
 }
 
+.img_phone h3 a, .cont_phone_center h3 a {
+    color: #B57270;
+}
+
 .card_number_17 {
     background: url('../images/17img_1467.png');
     @include cardWH();
@@ -450,7 +464,7 @@ h3 {
 .announcement {
     position: relative;
     width: 410px;
-    height: 217px;
+    height: auto;
     background-color: white;
     margin-top: 5%;
     padding: 1%;
@@ -489,7 +503,7 @@ h3 {
 
 
 footer {
-    width: 100%;
+    max-width: 1920px;
     //height: 471px;
     padding: 1%;
     background-color: #5f6e81;
@@ -510,7 +524,15 @@ footer {
 }
 
 .map_footer {
+    width: 25vw;
     margin-top: -33%;
+}
+
+.map_mobale {
+display: none;
+width: 760px;
+height: 494px;
+    background-image: url('../images/map_mobale1.png');
 }
 
 .map_footer:hover {
@@ -538,31 +560,290 @@ footer {
 }
 
 
-@media (max-width: 1200px) { 
- body {
-     background-size: cover;
+@media (min-width: 993px) and (max-width: 1200px) {
+   .navbar {
+    padding-left: 8rem;
+   }
+
+   .nav-item a.nav-link {
+       font-size: 1.8vw;
+   }
+
+   h3 {
+    font-size: 2.9vw;
+   }
+
+   .old {
+    padding-top: 34%;
+   }
+
+   .other .other_card {
+       flex-wrap: nowrap;
+   }
+
+   .map_footer {
+    width: 32vw;
+}
+
+   footer .ul_footer {
+    font-size: 2.3vw;
+   }
+
+   .contact_inet ul {
+    font-size: 2.3vw;
+   }
+    
+    a.button-top {
+        display: none;
+    }
+ 
  }
 
- .old {
-     display: none;
- }
+@media (min-width: 773px) and (max-width: 992px) { 
+.container {
+   // margin: 0;
+    padding-right: 0;
+}     
+    
 
- .about_us {
-    margin-top: 74%;
+.old {
+    display: none;
+}
+
+.h3_old {
+    display: block;
+    margin-bottom: 93%;
+}
+
+h1 {
+    margin-top: 35%;
+    margin-bottom: 2%;
+    font-size: 3.5vw;
+}
+
+h3 {
+    font-size: 3.2vw;
+    margin-bottom: 3%;
+}
+
+.production img {
+    width: 118%;
+} 
+
+.we ul li {
+    font-size: 3.1vw;
+}
+
+h5 {
+    font-size: 1.3rem;
+}
+
+.map_footer {
+    width: 32vw;
+}
+
+footer .ul_footer {
+    font-size: 2.3vw;
+}
+
+.contact_inet ul {
+    font-size: 2.3vw;
+}
+
+p {
+    font-size: 1.8vw;
+}
+
+.nav-item a.nav-link {
+    font-size: 2.3vw;
+}
+
+.dropdown-item {
+    font-size: 1.2em;
+}
+
+.c_d {
+    margin: 1%;
+}
+
+.other .other_card {
+    margin-bottom: 20%;
+}
+
+html, body {
+    overflow: hidden;
+    height: 100%;
+    box-sizing: border-box;
+    margin: 0;
+}
+  
+body {
+    overflow-y: scroll;
+    width: calc(100% + 20px);
+    padding: 8px;
+}
+
+}
+
+@media (min-width: 769px) and (max-width: 772px) { 
+.old {
+    display: none;
+}
+    
+.h3_old {
+    display: block;
+    margin-bottom: 93%;
+}
+
+h1 {
+    font-size: 1.9em;
+    margin-top: 34%;
+}
+
+h3 {
+    font-size: 1.5em;
+}
+
+.about_us {
+    margin-top: -2%;
+}
+
+.we ul li {
+    font-size: 1em;
+}
+
+.map_footer {
+    width: 18rem;
+    margin-top: -33%;
+}
+
+footer .ul_footer {
+    font-size: 1.2rem;
+}
+
+.contact_inet ul {
+    font-size: 1.2rem;
+}
+}   
+
+@media (max-width: 768px) {
+.gibka_main {
+    background: grey url('../images/Fon_body-768.png') 0 0/100% 100% no-repeat; 
+}
+
+.nav-item a.nav-link {
+    font-size: 1em;
+}
+
+.old {
+    display: none;
+}
+
+h1 {
+    font-size: 2em;
+    margin-top: 47%;
+}
+
+.h3_old {
+    display: block;
+    font-size: 1.6em;
+}
+
+h3 {
+    font-size: 1.6em;
+}
+
+.about_us {
+display: flex;
+flex-direction: column;
+align-content: center;
+margin-top: 109%;
+
+    h3 {
+        margin-bottom: 10%;
+    }
+}
+
+.about_us img.img_roof {
+    margin-bottom: 6%;
+    width: 30rem;
+}
+
+.we ul li {
+    font-size: 1.4em;
+}
+
+.production {
     width: 100%;
- }
- }
+    margin-top: 10%;
+}
 
- @media (max-width: 1170px) {  
-     .wrapper {
-         max-width: 1170px;
-     }
+.contact_local {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
-     main {
-         width: 100%;
-     }
+footer .ul_footer {
+    font-size: 1.2em;
+    margin-bottom: 4%;
+}
 
-     footer {
-         max-width: 1170px;
-     }
- }
+.contact_inet ul {
+    font-size: 1.2em;
+}
+
+.map {
+    display: none;
+}
+
+.map_mobale {
+    display: block;
+    width: 90%;
+    height: 494px;
+    border: 1px solid white;
+    border-radius: 10%;
+    -webkit-border-radius: 10%;
+    -moz-border-radius: 10%;
+    -ms-border-radius: 10%;
+    -o-border-radius: 10%;
+    background-position: center;
+}
+}
+
+@media (min-width: 320px) and (max-width: 480px) {
+.gibka_main {
+    background: grey url('../images/Fon_body-480-end.png') 0 0/100% 100% no-repeat; 
+    
+}
+
+.nav-item a.nav-link {
+    font-size: 1em;
+    color: rgba(0, 0, 0, 0.795);
+    border-color: rgba(0, 0, 0, 0.336);
+}
+
+h1 {
+    margin-top: 6%;
+}
+
+.link_phone_nav {
+    display: none;
+}
+
+.about_us {
+    margin-top: 10%;
+
+    img.img_roof {
+        margin-bottom: 6%;
+        width: 17rem;
+    }
+}
+
+.img_phone h3 a, .cont_phone_center h3 a {
+    color: #B57270;
+
+}
+
+
+}
