--- a/style/style.scss
+++ b/style/style.scss
@@ -185,10 +185,6 @@ a.nav-link.link_phone {
     transform: translateY(-7px);
 }
 
-button.navbar-toggler {
-    background-color: blanchedalmond;
-}
-
 h1 {
     font-family: XeniaExtended;
     text-align: center;
@@ -509,7 +505,7 @@ h3 {
         color: #a90000;
         font-weight: bold;
         bottom: -15%;
-        right: 5%;
+        right: 1%;
     }
 }
 
@@ -839,6 +835,12 @@ footer .ul_footer {
     -o-border-radius: 10%;
     background-position: center;
 }
+}
+
+@media (min-width: 480px) and (max-width: 1920px) {
+    .navbar-light .navbar-nav .nav-link {
+        color: white;
+    }
 }
 
 @media (min-width: 320px) and (max-width: 480px) {
