--- a/style/style.css
+++ b/style/style.css
@@ -106,10 +106,6 @@ a.nav-link.link_phone {
   transform: translateY(-7px);
 }
 
-button.navbar-toggler {
-  background-color: blanchedalmond;
-}
-
 h1 {
   font-family: XeniaExtended;
   text-align: center;
@@ -628,7 +624,7 @@ h3 {
   color: #a90000;
   font-weight: bold;
   bottom: -15%;
-  right: 5%;
+  right: 1%;
 }
 
 footer {
@@ -954,6 +950,11 @@ footer .ul_footer li a:hover {
     -ms-border-radius: 10%;
     -o-border-radius: 10%;
     background-position: center;
+  }
+}
+@media (min-width: 480px) and (max-width: 1920px) {
+  .navbar-light .navbar-nav .nav-link {
+    color: white;
   }
 }
 @media (min-width: 320px) and (max-width: 480px) {
